--- a/src/style.css
+++ b/src/style.css
@@ -24,7 +24,7 @@ body {
   width: 100%;
   align-items: center;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
   background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%239C92AC' fill-opacity='0.05'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
@@ -193,7 +193,7 @@ button:hover {
   display: flex;
   justify-content: center;
   width: fit-content;
-  flex-shrink: 2;
+  /* flex-shrink: 2; */
   /* border: 5px solid black;
   background-color: gainsboro; */
   height: fit-content;
@@ -224,21 +224,27 @@ button:hover {
 
 .station-chooser {
   display: flex;
-  gap: 50px;
+  gap: 20px;
   width: 100%;
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
 
-.Dropdown-root::before {
+.dropdown-title {
   content: "Select a station";
-  color: rgb(141, 122, 101);
-  font-family: "Courier New", Courier, monospace;
+  color: rgb(112, 98, 81);
+  font-family: "Helvetica";
   font-size: 1.15rem;
+  font-weight: 600;
+  margin-top: 20px;
+  margin-bottom: -5px;
   /* font-weight: 800; */
 }
 .station-chooser > .Dropdown-root {
   width: 300px;
+  text-align: left;
+
   /* margin-top: 5px; */
 }
 
@@ -293,14 +299,6 @@ button:hover {
   transform: scale(1.5);
 }
 
-.bottom-text {
-  height: fit-content;
-  width: 160px;
-  color: antiquewhite;
-  font-family: "Courier New", Courier, monospace;
-  font-size: 1rem;
-  /* margin-left: 30px; */
-}
 .other-services {
   display: flex;
   gap: 15px;
@@ -653,12 +651,12 @@ button:hover {
   #root,
   .App,
   .App > * {
-    width: 100vw;
+    width: 100%;
   }
 
   .App {
     padding: 0;
-    padding-right: 10px;
+    /* padding-right: 10px; */
     padding-top: 35px;
     overflow-x: hidden;
     flex-wrap: none;
@@ -668,9 +666,9 @@ button:hover {
   }
 
   .header {
-    width: 100vw;
+    width: 100%;
     margin: 0;
-    @media position: relative;
+    position: relative;
     /* margin-bottom: 10px; */
   }
 
@@ -710,6 +708,7 @@ button:hover {
     justify-content: center;
     margin-top: 8px;
     gap: 0;
+    margin-right: 5px;
     /* background-color: rgb(189, 189, 189); */
     /* margin-right: 10px; */
   }
@@ -723,7 +722,7 @@ button:hover {
   .add-wrapper,
   .lineChooser,
   .add-lines {
-    width: 85vw;
+    /* width: 85%; */
     padding: 0;
   }
 
@@ -736,23 +735,29 @@ button:hover {
 
   .lineChooser {
     display: flex;
-    padding: 30px;
+    padding: 20px;
     height: fit-content;
-    /* animation: fadeIn 0.1s linear; */
-  }
 
-  .bottom-text {
-    color: darkslategray;
-    /* font-family: Arial, Helvetica, sans-serif; */
-    width: 80px;
+    /* animation: fadeIn 0.1s linear; */
   }
 
   .other-services {
     display: flex;
     flex-wrap: wrap;
-    width: 150px;
+    /* width: 150px; */
     align-items: center;
     margin-bottom: 12px;
+    gap: 15px;
+  }
+
+  .other-line > input {
+    margin-top: 7px;
+    height: 15px;
+    width: 15px;
+  }
+
+  .other-line > label {
+    margin-right: 10px;
   }
 
   .monitor-box {
@@ -767,19 +772,52 @@ button:hover {
   }
 
   .remove-monitor-btn {
-    font-size: 1rem;
+    font-size: 1.25rem;
+    font-family: "Courier New", Courier, monospace;
+    transition-duration: 0.5s;
+  }
+
+  .remove-monitor-btn:hover {
+    color: rgb(111, 111, 111);
   }
 
   .monitor-wrapper {
-    max-height: 410px;
-    margin-bottom: -50px;
+    max-height: 600px;
+    margin-bottom: -20px;
+    width: 80%;
+  }
+
+  .monitor-trains {
+    padding: 0;
+  }
+
+  .train-wrapper,
+  .train-wrapper-filtered {
+    height: fit-content;
   }
 
   .add-lines {
-    gap: 1;
+    gap: 25px;
+    width: 100%;
   }
 
   .add-lines > .subway-icon {
-    transform: scale(2.6);
+    transform: scale(1);
+    width: 40px;
+    height: 40px;
+    font-size: 2.5rem;
+  }
+
+  .station-chooser {
+    display: flex;
+    flex-direction: column;
+  }
+  .service-chooser-wrapper {
+    justify-content: center;
+    align-items: center;
+  }
+  .service-chooser {
+    align-items: center;
+    justify-content: center;
   }
 }
