--- a/src/style.css
+++ b/src/style.css
@@ -25,7 +25,7 @@ body {
   align-items: center;
   flex-direction: column;
   height: 100%;
-  background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%239C92AC' fill-opacity='0.05'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%239C92AC' fill-opacity='0.06'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
 .header {
@@ -179,7 +179,7 @@ button {
 }
 
 button:hover {
-  background-color: #ffefae;
+  background-color: #fff2bd;
   cursor: pointer;
 }
 
@@ -332,7 +332,7 @@ button:hover {
   border-radius: 10px;
   /* background-color: white; */
   width: 350px;
-  max-height: 550px;
+  /* max-height: 615px; */
   transition-duration: 0.3s;
   align-items: center;
   animation: fadeIn 0.5s linear;
@@ -449,7 +449,6 @@ button:hover {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 100%;
   /* border-radius: 5px; */
   overflow-y: scroll;
   overflow-x: hidden;
@@ -467,8 +466,8 @@ button:hover {
   width: 100%;
   animation: fadeIn 1s linear;
   transition-duration: 0.35s;
-
-  height: 55px;
+  height: 62;
+  max-height: 62px;
   /* max-height: 35px; */
   align-items: center;
 }
@@ -674,7 +673,7 @@ button:hover {
   }
 
   .landing-wrapper {
-    margin-bottom: 50px;
+    padding-bottom: 170px;
   }
 
   .big-train {
@@ -783,7 +782,6 @@ button:hover {
   }
 
   .monitor-wrapper {
-    max-height: 600px;
     margin-bottom: -20px;
     width: 80%;
   }
@@ -794,7 +792,8 @@ button:hover {
 
   .train-wrapper,
   .train-wrapper-filtered {
-    height: fit-content;
+    height: 62px;
+    max-height: 62px;
   }
 
   .add-lines {
